MAINT-1361 Spring Data Elasticsearch upgrade for 7.7.0
MAINT-1420 Update max terms count index setting for QueryConcept